# Candidate-Classification

./: .gitignore  README.md  pyproject.toml  test.py
src/candidate_classification_project/: nlp_script.py  openai_script.py  run_both.py
